# C-Cmake

./: CMakeLists.txt  README.md
include/: calculator.h
src/: calculator.c  foo.c  main.c
